# snapbgr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1  vcpkg.json
.github/workflows/: ci.yml
installer/: Bundle.wxs  LICENSE.txt  Product.wxs  license.rtf
models/: README.md
src/: App.xaml  App.xaml.cpp  App.xaml.h  AppState.cpp  AppState.h  BackgroundRemovalService.cpp  BackgroundRemovalService.h  DirectoryWatcher.cpp  DirectoryWatcher.h  HomePage.xaml  HomePage.xaml.cpp  HomePage.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Settings.cpp  Settings.h  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  TrayController.cpp  TrayController.h  pch.h  tray_app.rc  tray_main.cpp
tests/: console_test.cpp
